<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background = "@drawable/bg">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/fab_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:menu_labels_colorNormal="#4CAF50"
                app:menu_colorNormal="@color/colorAccent"
                app:menu_labels_colorPressed="@color/colorAccent"
                app:menu_colorPressed="@color/colorAccent"
                android:layout_marginBottom="8dp">
                <com.github.clans.fab.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="@color/colorAccent"
                    app:fab_colorPressed="@color/colorAccent"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/fab_choice"
                    app:fab_size="mini"
                    app:fab_label="@string/rad"
                    android:src="@drawable/ic_radio_button"/>
                <com.github.clans.fab.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="@color/colorAccent"
                    app:fab_colorPressed="@color/colorAccent"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/fab_text"
                    app:fab_size="mini"
                    app:fab_label="@string/text"
                    android:src="@drawable/ic_short_text"/>
            </com.github.clans.fab.FloatingActionMenu>

    </LinearLayout>

</RelativeLayout>







