<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/multiple_choice_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="Multi-choice question"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <CheckBox
            android:id="@+id/checkBox0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/multiple_choice_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Select: choice"
            android:visibility="gone"
            />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/checkBox0"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Select: choice"
            android:visibility="gone"
            />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/checkBox1"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Select: choice"
            android:visibility="gone"
            />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/checkBox2"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Select: choice"
            android:visibility="gone"
            />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/checkBox3"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Select: choice"
            android:visibility="gone"
            />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/checkBox4"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Select: choice"
            android:visibility="gone"
            />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/checkBox5"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Select: choice"
            android:visibility="gone"
            />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/checkBox6"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Select: choice"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>