<resources>
    <string name="app_name">HandsUp!</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_voting_title">Want to create a voting?</string>
    <string name="create_voting_button">Create Voting</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="do_voting_title">Do voting!</string>
    <string name="do_voting_button">Start</string>
    <string name="text_q_cancel">cancel</string>
    <string name="text_q_save">save</string>
    <string name="save_menu_item">Save</string>
    <string name="default_voting_title">New Voting</string>
    <string name="hint_do_voting">Input a Voting Id</string>
    <string name="voting_id_title_text">Voting id:</string>
    <string name="choice">multiple</string>
    <string name="text">text</string>
    <string name="rad">multiple</string>
    <string name="send_do_voting">Send</string>
    <string name="button_text_ans_detail">View detail</string>
    <string name="text_voter_count_title">Total answers :\u0020 </string>
    <string name="button_delete_voting">Delete voting</string>
    <string name="button_view_voting">View voting</string>
    <string name="button_submit_text">Submit!</string>
</resources>
