...
    android:id="@+id/edit_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit_voting.TextQuestionActivity">

    <EditText
        android:id="@+id/editText_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="182dp"
        android:layout_marginRight="182dp"
        android:ems="10"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:background="#009688"
        android:text="@string/text_q_cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_save_text"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_save_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
