...
                        android:layout_gravity="center"
                        android:text="@string/create_voting_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_create_voting"
                        style="@style/MainActivityButton"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:onClick="launchVotingEdit"
                        android:text="@string/create_voting_button" />
...
            </androidx.cardview.widget.CardView>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_recyclerview"
                android:nestedScrollingEnabled="false"
                >

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

...
